change and generate docs
